stuff
- dead body
- better blade storm
- permissions to commands & tablist